--- a/index.html
+++ b/index.html
@@ -8,8 +8,46 @@
 
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+
+
 </head>
 <body>
-    <h1>Adriano Cruz</h1>
+    <header class="header">
+        <div class="header__brand">
+            <img class="brand__logo" src="assets/img/logo.png" alt="Logo AC">
+        </div>
+        <i id="toggleTheme" class="bi bi-triangle"></i>
+    </header>
+    <h1 style="background: black; color: white; border: 10px solid black; padding:20px">Adriano Cruz</h1>
+    <nav>
+        <ul class="menu menu--mobile">
+            <li class="menu__item">
+                <a class="menu__link active" href="#home">
+                    <i class="menu__icon bi bi-house-door"></i>
+                    <span class="menu__text">Home</span>
+                </a>
+            </li>
+            <li class="menu__item">
+                <a class="menu__link" href="#projetos">
+                    <i class="menu__icon bi bi-folder"></i>
+                    <span class="menu__text">Projetos</span>
+                </a>
+            </li>
+            <li class="menu__item">
+                <a class="menu__link" href="#about">
+                    <i class="menu__icon bi bi-info-circle"></i>
+                    <span class="menu__text">About</span>
+                </a>
+            </li>
+            <li class="menu__item">
+                <a class="menu__link" href="#Contato">
+                    <i class="menu__icon bi bi-envelope"></i>
+                    <span class="menu__text">Contato</span>
+                </a>
+            </li>
+        </ul>
+    </nav>
+
 </body>
 </html>
