--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-br" data-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,8 +9,6 @@
     <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
-
-
 </head>
 <body>
     <header class="header">
@@ -39,13 +37,18 @@
             </ul>
         </nav>
         <div class="header__brand">
-            <img class="brand__logo" src="assets/img/logo.png" alt="Logo AC">
+            <img class="brand__logo" src="assets/img/darkLogo.png" alt="Logo AC">
         </div>
         <div class="header__toggle">
             <i id="toggleTheme" class="bi bi-triangle"></i>
         </div>
     </header>
-    <h1 style="background: black; color: white; border: 10px solid black; padding:20px">Adriano Cruz</h1>
+    <main></main>
+    <footer class="footer">
+        <p>
+            © 2024. All rights reserved. Adriano Cruz. Development of the <a href="https://github.com/adrianocruzweb/" target="_blank">AC</a>
+        </p>
+    </footer>
     <nav class="nav--mobile">
         <ul class="menu menu--mobile">
             <li class="menu__item">
@@ -67,13 +70,13 @@
                 </a>
             </li>
             <li class="menu__item">
-                <a class="menu__link" href="#Contato">
+                <a class="menu__link" href="#contato">
                     <i class="menu__icon bi bi-envelope"></i>
                     <span class="menu__text">Contato</span>
                 </a>
             </li>
         </ul>
     </nav>
-
+    <script src="assets/js/scripts.js"></script>
 </body>
 </html>
