primary section finiched and start skills

--- a/index.html
+++ b/index.html
@@ -43,7 +43,47 @@
             <i id="toggleTheme" class="bi bi-triangle"></i>
         </div>
     </header>
-    <main></main>
+    <main>
+        <div class="main__content">
+            <h1>
+                Aqui nos especializamos em <b>desenvolver o seu sucesso.</b>
+            </h1>
+            <p>
+                Adriano Cruz desenvolvedor de sistemas web a mais de 8 anos.
+            </p>
+            <ul class="menu menu--social">
+                <li>
+                    <a class="menu__link" href="https://github.com/adrianocruzweb" target="_blank" rel="noopener">
+                        <i class="menu__icon bi bi-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a class="menu__link" href="https://www.linkedin.com/in/adrianocruzcode/" target="_blank" rel="noopener">
+                        <i class="menu__icon bi bi-linkedin"></i>
+                    </a>
+                </li>
+            </ul>
+            <button class="btn btn--primary" data-toggle="tooltip" data-placement="top">
+                <span>
+                    Ver projetos
+                </span>
+                <i class="bi bi-arrow-down-right"></i>
+            </button>
+        </div>
+        <div class="main__content-video">
+            <iframe
+                src="https://www.youtube.com/embed/1Z2Tx6OZ0CI?si=T2PuqaVNMThb4pJV"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                referrerpolicy="strict-origin-when-cross-origin"
+                allowfullscreen>
+            </iframe>
+        </div>
+    </main>
+    <section class="habilidades">
+        <h2>Conhecimento nas principais tecnologias do mercado</h2>
+    </section>
     <footer class="footer">
         <p>
             © 2024. All rights reserved. Adriano Cruz. Development of the <a href="https://github.com/adrianocruzweb/" target="_blank">AC</a>
