--- a/index.html
+++ b/index.html
@@ -81,11 +81,23 @@
             </iframe>
         </div>
     </main>
-    <section class="habilidades">
+    <section class="skills">
         <h2>Conhecimento nas principais tecnologias do mercado</h2>
-        <ul>
-            <li>
-
+        <ul class="skills__list">
+            <li class="skills__item">
+                <img  class="skills__logo" src="assets/img/php.png" alt="php">
+            </li>
+            <li class="skills__item">
+                <img  class="skills__logo" src="assets/img/csharp.png" alt="php">
+            </li>
+            <li class="skills__item">
+                <img  class="skills__logo" src="assets/img/ts.png" alt="php">
+            </li>
+            <li class="skills__item">
+                <img  class="skills__logo" src="assets/img/react.png" alt="php">
+            </li>
+            <li class="skills__item">
+                <img  class="skills__logo" src="assets/img/python.png" alt="php">
             </li>
         </ul>
     </section>
