--- a/index.html
+++ b/index.html
@@ -96,9 +96,9 @@
             <li class="skills__item">
                 <img  class="skills__logo" src="assets/img/react.png" alt="php">
             </li>
-            <li class="skills__item">
+            <!-- <li class="skills__item">
                 <img  class="skills__logo" src="assets/img/python.png" alt="php">
-            </li>
+            </li> -->
         </ul>
     </section>
     <footer class="footer">
