--- a/index.html
+++ b/index.html
@@ -101,6 +101,35 @@
             </li> -->
         </ul>
     </section>
+    <section class="projects">
+        <h2>Projetos</h2>
+        <div class="projects__card">
+            <img class="card__cover" src="assets/img/proj/proj_mock_first.png" alt="Screen css developer study">
+            <h3 class="card__title">
+               Projeto de estudo de <b>CSS</b>
+            </h3>
+            <p class="card__description">
+                Um projeto de uma Landing Page com algumas tecnicas simples de CSS mais com um formato futurista...
+            </p>
+            <ul class="card__list">
+                <li class="card__item">Identidade visual</li>
+                <li class="card__item">Perfeita para página de vendas</li>
+                <li class="card__item">Criada a partir do design</li>
+            </ul>
+            <div class="card__buttons">
+                <button class="btn btn--primary">
+                    <!-- href="https://adrianocruzweb.github.io/trilha-css-desafio-01/" -->
+                    <span>Prévia</span>
+                    <i class="bi bi-arrow-up-right"></i>
+                </button>
+                <button class="btn btn--primary">
+                    <!-- href="https://github.com/adrianocruzweb/trilha-css-desafio-01" -->
+                    <span>Repositório</span>
+                    <i class="bi bi-github"></i>
+                </button>
+            </div>
+        </div>
+    </section>
     <footer class="footer">
         <p>
             © 2024. All rights reserved. Adriano Cruz. Development of the <a href="https://github.com/adrianocruzweb/" target="_blank">AC</a>
