--- a/index.html
+++ b/index.html
@@ -111,26 +111,28 @@
                 <div class="card__body">
                     <h3 class="card__title">
                         Projeto de estudo de <b>CSS</b>
-                     </h3>
-                     <p class="card__description">
-                         Um projeto de uma Landing Page com algumas tecnicas simples de CSS mais com um formato futurista...
-                     </p>
-                     <ul class="card__list">
-                         <li class="card__item">Identidade visual</li>
-                         <li class="card__item">Perfeita para página de vendas</li>
-                         <li class="card__item">Criada a partir do design</li>
-                     </ul>
-                     <div class="card__buttons">
-                         <button class="btn btn--primary">
-                             <!-- href="https://adrianocruzweb.github.io/trilha-css-desafio-01/" -->
-                             <span>Prévia</span>
-                             <i class="bi bi-arrow-up-right"></i>
-                         </button>
-                         <button class="btn">
-                             <!-- href="https://github.com/adrianocruzweb/trilha-css-desafio-01" -->
-                             <span>Repositório</span>
-                         </button>
-                     </div>
+                    </h3>
+                    <p class="card__description">
+                        Um projeto de uma Landing Page com algumas tecnicas simples de CSS mais com um formato futurista...
+                    </p>
+                    <ul class="card__list">
+                        <li class="card__item">Identidade visual</li>
+                        <li class="card__item">Perfeita para página de vendas</li>
+                        <li class="card__item">Criada a partir do design</li>
+                    </ul>
+                    <div class="card__buttons">
+                        <a href="https://adrianocruzweb.github.io/trilha-css-desafio-01/">
+                            <button class="btn btn--primary">
+                                <span>Prévia</span>
+                                <i class="bi bi-arrow-up-right"></i>
+                            </button>
+                        </a>
+                        <a href="https://github.com/adrianocruzweb/trilha-css-desafio-01">
+                            <button class="btn">
+                                <span>Repositório</span>
+                            </button>
+                        </a>
+                    </div>
                 </div>
             </div>
             <div class="projects__card card--reverse">
@@ -138,26 +140,26 @@
                 <div class="card__body">
                     <h3 class="card__title">
                         Site Cliente <b>Perícia</b>
-                     </h3>
-                     <p class="card__description">
+                    </h3>
+                    <p class="card__description">
                         Site Institucional adrianaperita.com.br
-                     </p>
-                     <ul class="card__list">
-                         <li class="card__item">Estrutura padão</li>
-                         <li class="card__item">Formulário de Contato</li>
-                         <li class="card__item">Marca pessoal</li>
-                     </ul>
-                     <div class="card__buttons">
-                         <button class="btn btn--primary">
-                             <!-- href="https://adrianocruzweb.github.io/trilha-css-desafio-01/" -->
-                             <span>Prévia</span>
-                             <i class="bi bi-arrow-up-right"></i>
-                         </button>
-                        <!--  <button class="btn"> -->
-                             <!-- href="https://github.com/adrianocruzweb/trilha-css-desafio-01" -->
-                         <!--     <span>Repositório</span>
-                         </button> -->
-                     </div>
+                    </p>
+                    <ul class="card__list">
+                        <li class="card__item">Estrutura padão</li>
+                        <li class="card__item">Formulário de Contato</li>
+                        <li class="card__item">Marca pessoal</li>
+                    </ul>
+                    <div class="card__buttons">
+                        <a href="https://adrianaperita.com.br/">
+                            <button class="btn btn--primary">
+                                <span>Prévia</span>
+                                <i class="bi bi-arrow-up-right"></i>
+                            </button>
+                        </a>
+                        <button class="btn nao--autorizado">
+                            <span>Repositório</span>
+                        </button>
+                    </div>
                 </div>
             </div>
             <div class="projects__card">
@@ -165,26 +167,26 @@
                 <div class="card__body">
                     <h3 class="card__title">
                         Site Cliente <b>Inglês</b>
-                     </h3>
-                     <p class="card__description">
+                    </h3>
+                    <p class="card__description">
                          Site desenvolvido em framework CakePHP totalemnte dinâmico com score e ranking e um método inovador de aprendizado de inglês... voceaprendeagora.com
-                     </p>
-                     <ul class="card__list">
-                         <li class="card__item">Area Administrativa</li>
-                         <li class="card__item">Sistema de questionários</li>
-                         <li class="card__item">Avaliações e score</li>
-                     </ul>
-                     <div class="card__buttons">
-                         <button class="btn btn--primary">
-                             <!-- href="https://adrianocruzweb.github.io/trilha-css-desafio-01/" -->
-                             <span>Prévia</span>
-                             <i class="bi bi-arrow-up-right"></i>
-                         </button>
-                         <!-- <button class="btn"> -->
-                             <!-- href="https://github.com/adrianocruzweb/trilha-css-desafio-01" -->
-                            <!--  <span>Repositório</span>
-                         </button> -->
-                     </div>
+                    </p>
+                    <ul class="card__list">
+                        <li class="card__item">Area Administrativa</li>
+                        <li class="card__item">Sistema de questionários</li>
+                        <li class="card__item">Avaliações e score</li>
+                    </ul>
+                    <div class="card__buttons">
+                        <a href="https://voceaprendeagora.com">
+                            <button class="btn btn--primary">
+                                <span>Prévia</span>
+                                <i class="bi bi-arrow-up-right"></i>
+                            </button>
+                        </a>
+                        <button class="btn nao--autorizado">
+                            <span>Repositório</span>
+                        </button>
+                    </div>
                 </div>
             </div>
             <div class="projects__card card--reverse">
@@ -193,25 +195,25 @@
                     <h3 class="card__title">
                         Site Cliente <b>Seguros</b>
                      </h3>
-                     <p class="card__description">
+                    <p class="card__description">
                         Site Institucional adequiseguros.com.br
-                     </p>
-                     <ul class="card__list">
-                         <li class="card__item">Estrutura padão</li>
-                         <li class="card__item">Formulário de Contato</li>
-                         <li class="card__item">Marca pessoal</li>
-                     </ul>
-                     <div class="card__buttons">
-                         <button class="btn btn--primary">
-                             <!-- href="https://adrianocruzweb.github.io/trilha-css-desafio-01/" -->
-                             <span>Prévia</span>
-                             <i class="bi bi-arrow-up-right"></i>
-                         </button>
-                         <!-- <button class="btn"> -->
-                             <!-- href="https://github.com/adrianocruzweb/trilha-css-desafio-01" -->
-                             <!-- <span>Repositório</span>
-                         </button> -->
-                     </div>
+                    </p>
+                    <ul class="card__list">
+                        <li class="card__item">Estrutura padão</li>
+                        <li class="card__item">Formulário de Contato</li>
+                        <li class="card__item">Marca pessoal</li>
+                    </ul>
+                    <div class="card__buttons">
+                        <a href="https://adequiseguros.com.br">
+                            <button class="btn btn--primary">
+                                <span>Prévia</span>
+                                <i class="bi bi-arrow-up-right"></i>
+                            </button>
+                        </a>
+                        <button class="btn nao--autorizado">
+                            <span>Repositório</span>
+                        </button>
+                    </div>
                 </div>
             </div>
             <a class="a--button" href="https://github.com/adrianocruzweb">
@@ -255,6 +257,14 @@
             </li>
         </ul>
     </nav>
+    <div id="popup" class="hidden" style="display: none;">
+        <div class="popup-content">
+            <span id="closePopupBtn">
+                &times;
+            </span>
+            <p>Repositório Privado</p>
+        </div>
+    </div>
     <script src="assets/js/scripts.js"></script>
 </body>
 </html>
