profile in progress

--- a/index.html
+++ b/index.html
@@ -224,6 +224,99 @@
             </a>
         </div>
     </section>
+    <section id="about" class="about">
+        <div class="about__content">
+            <img src="assets/img/profile/ImagemAtualPolo.jpg" alt="Adriano Cruz photo profile" class="about__photo">
+            <div class="about__description">
+                <h2 class="about__title">Sobre mim</h2>
+                <p class="about__text">
+                    Meu nome é Adriano, tenho 36 anos e sou formado em Ciências da Computação. Trabalho como desenvolvedor Full Stack desde 2015. Meu objetivo é aprimorar meus conhecimentos e contribuir com o mundo da tecnologia.
+                </p>
+                <div class="about__icons">
+                    <i class="bi bi-translate"></i>
+                    <span>Inglês: Intermediário</span>
+                </div>
+                <div class="description__buttons">
+                    <a href="https://www.linkedin.com/in/adrianocruzcode/">
+                        <button class="btn btn--primary">
+                            <span>COnecte-se Comigo</span>
+                            <i class="bi bi-arrow-up-right"></i>
+                        </button>
+                    </a>
+                    <a href="">
+                        <button class="btn">
+                            <span>Currículo</span>
+                        </button>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <div class="about__professional-training">
+            <div class="col-st">
+                <div class="row-st">
+                    <h3>Formação</h3>
+                    <h4>Bacharelado em Ciência da Computação</h4>
+                    <span>Mar 2010 - Mar 2015</span>
+                    <div class="about__icons">
+                        <i class="bi bi-bank"></i>
+                        <span>Universidade Anhanguera</span>
+                    </div>
+                    <div class="about__icons">
+                        <i class="bi bi-mortarboard"></i>
+                        <span>Graduação Stricto Sensu</span>
+                    </div>
+                </div>
+                <!-- <div class="row-nd">
+                    <h3>Experiências</h3>
+                    <h4>Desenvolvedor Full-Stack</h4>
+                    <span>Mar 2010 - Mar 2015</span>
+                    <div class="about__icons">
+                        <i class="bi bi-bank"></i>
+                        <span>Universidade Anhanguera</span>
+                    </div>
+                    <div class="about__icons">
+                        <i class="bi bi-mortarboard"></i>
+                        <span>Graduação Stricto Sensu</span>
+                    </div>
+                </div> -->
+            </div>
+            <div class="col-nd">
+                <h3>Cursos</h3>
+                <div id="accordion">
+                    <div class="accordion__item active">
+                        <button class="accordion__header start">
+                            <span>Versionamento de Código com Git e GitHub</span>
+                            <i class="bi bi-caret-down-fill"></i>
+                        </button>
+                        <div class="accordion__body">
+                            <p>Digital Innovation One. Nov 2023 2h.</p>
+                        </div>
+                    </div>
+
+                    <div class="accordion__item">
+                        <button class="accordion__header">
+                            <span>Contribuindo em um Projeto Open Source no GitHub</span>
+                            <i class="bi bi-caret-down-fill"></i>
+                        </button>
+                        <div class="accordion__body">
+                            <p>Digital Innovation One. Jan 2024 4h.</p>
+                        </div>
+                    </div>
+
+                    <div class="accordion__item">
+                        <button class="accordion__header end">
+                            <span>Gerenciando Componentes React</span>
+                            <i class="bi bi-caret-down-fill"></i>
+                        </button>
+                        <div class="accordion__body end">
+                            <p>Digital Innovation One. Out 2024 6h.</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </section>
     <footer class="footer">
         <p>
             © 2024. All rights reserved. Adriano Cruz. Development of the <a href="https://github.com/adrianocruzweb/" target="_blank">AC</a>
