contact in progress

--- a/index.html
+++ b/index.html
@@ -317,6 +317,30 @@
             </div>
         </div>
     </section>
+    <section class="contact" id="contact">
+        <h2>Contacte-me</h2>
+        <p>Estou disponivel para serviçoes e novas conexões. Contacte-me cia e-mail e conecte-se comigo atraves das minhas redes sociais. </p>
+        <ul class="manu menu--social">
+            <li>
+                <a class="menu__link" href="https://github.com/adrianocruzweb" target="_blank">
+                    <i class="menu__icon bi bi-github"></i>
+                    <span>GitHub</span>
+                </a>
+            </li>
+            <li>
+                <a class="menu__link" href="https://www.linkedin.com/in/adrianocruzcode/" target="_blank">
+                    <i class="menu__icon bi bi-linkedin"></i>
+                    <span>Linkedin</span>
+                </a>
+            </li>
+            <li>
+                <a class="menu__link" href="https://www.instagram.com/adrianocruzcode/" target="_blank">
+                    <i class="menu__icon bi bi-instagram"></i>
+                    <span>Instagram</span>
+                </a>
+            </li>
+        </ul>
+    </section>
     <footer class="footer">
         <p>
             © 2024. All rights reserved. Adriano Cruz. Development of the <a href="https://github.com/adrianocruzweb/" target="_blank">AC</a>
