--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
     <section class="contact" id="contact">
         <h2>Contacte-me</h2>
         <p>Estou disponivel para serviçoes e novas conexões. Contacte-me cia e-mail e conecte-se comigo atraves das minhas redes sociais. </p>
-        <ul class="manu menu--social">
+        <ul class="menu menu--social">
             <li>
                 <a class="menu__link" href="https://github.com/adrianocruzweb" target="_blank">
                     <i class="menu__icon bi bi-github"></i>
