--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </a>
                 </li>
                 <li class="menu__item">
-                    <a class="menu__link" href="#Contato">
+                    <a class="menu__link" href="#contact">
                         <span class="menu__text">Contato</span>
                     </a>
                 </li>
