--- a/index.html
+++ b/index.html
@@ -382,6 +382,7 @@
             <p>Repositório Privado</p>
         </div>
     </div>
+    <button id="backToTop">Voltar ao Topo</button>
     <script src="assets/js/scripts.js"></script>
 </body>
 </html>
