adjust back to top

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
                 </a>
             </li>
             <li class="menu__item">
-                <a class="menu__link" href="#contato">
+                <a class="menu__link" href="#contact">
                     <i class="menu__icon bi bi-envelope"></i>
                     <span class="menu__text">Contato</span>
                 </a>
@@ -382,7 +382,9 @@
             <p>Repositório Privado</p>
         </div>
     </div>
-    <button id="backToTop">Voltar ao Topo</button>
+    <button id="backToTop">
+        <i class="bi bi-arrow-up-short"></i>
+    </button>
     <script src="assets/js/scripts.js"></script>
 </body>
 </html>
