link home adjust

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </header>
     <main>
-        <div class="main__content">
+        <div class="main__content" id="home">
             <h1>
                 Aqui nos especializamos em <b>desenvolver o seu sucesso.</b>
             </h1>
